cabal-version: 1.12

name:           lh-plugin-demo
version:        0.1.0.0
description:    This toy package demonstrates the use of LH as a plugin.
homepage:
bug-reports:
author:         Ranjit Jhala
maintainer:     jhala@cs.ucsd.edu
copyright:      2020 Ranjit Jhala
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Demo.Lib,
      Demo.Client,
      Demo.Erase
  hs-source-dirs:
      src
  build-depends:
      base,
      containers,
      liquid-prelude == 0.9.2.5,
      liquid-vector == 0.12.3.1.2,
      liquidhaskell == 0.9.2.5.0,
      vector
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
